Productos, formulario de consulta. wip

--- a/stib-administraciones/templates/productos/productos_detail.html
+++ b/stib-administraciones/templates/productos/productos_detail.html
@@ -60,4 +60,24 @@
             </a>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <br>
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title">
+                    <i class="fa fa-envelope-o"></i> Envianos tu consulta
+                </h3>
+              </div>
+              <div class="panel-body">
+                  <p>Utilize el siguiente formulario para comunicarte con nosotros acerca de este este producto.</p>
+                <form>
+                    <textarea rows="10" cols="110"></textarea>
+                </form>
+              </div>
+            </div>
+
+
+        </div>
+    </div>
 {% endblock %}
