--- a/stib-administraciones/templates/productos/productos_detail.html
+++ b/stib-administraciones/templates/productos/productos_detail.html
@@ -2,6 +2,7 @@
 {% load productos_tags %}
 {% load thumbnail %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block title %} {{ object.nombre }} {% endblock %}
 
@@ -70,14 +71,14 @@
                 </h3>
               </div>
               <div class="panel-body">
-                  <p>Utilize el siguiente formulario para comunicarte con nosotros acerca de este este producto.</p>
-                <form>
-                    <textarea rows="10" cols="110"></textarea>
+                  <p>Utilize el siguiente formulario para comunicarte con nosotros acerca de este producto.</p>
+                <form method="post" action="{% url 'productos:enviar_consulta' object.id %}">
+                    {% csrf_token %}
+                    {{ form_consulta|crispy }}
+                    <input type="submit" class="btn btn-success">
                 </form>
               </div>
             </div>
-
-
         </div>
     </div>
 {% endblock %}
