Mostrar 'mas productos...'

--- a/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
+++ b/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
@@ -102,7 +102,7 @@
             <div class="col-lg-3">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                      <i class="fa fa-building fa-fw text-white"></i> {{otro_edificio.nombre}}
+                      <i class="fa fa-building fa-fw"></i> {{otro_edificio.nombre}}
                     </div>
                     <div class="panel-body text-center">
                         {% if otro_edificio.foto_fachada %}
