--- a/stib-administraciones/templates/productos/productos_detail.html
+++ b/stib-administraciones/templates/productos/productos_detail.html
@@ -81,4 +81,27 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Otros productos</h1>
+        </div>
+        {% for otro_producto in otros_productos %}
+            <div class="col-lg-3">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                      <i class="fa fa-archive"></i> {{otro_producto.nombre}}
+                    </div>
+                    <div class="panel-body text-center">
+                        {% if otro_producto.image %}
+                            <img class="img-responsive center-block" src="{% thumbnail otro_producto.image 100x100 crop %}" alt="No imagen">
+                        {% else %}
+                            <img class="img-responsive center-block" src="{% static 'images/sin-imagen.jpg' %}">
+                        {% endif %}
+                        <br><br>
+                        <a class="btn btn-success" href="{% url 'productos:detail' otro_producto.id %}">Visitar</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
