--- a/stib-administraciones/templates/servicios/servicios_detail.html
+++ b/stib-administraciones/templates/servicios/servicios_detail.html
@@ -81,4 +81,30 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Otros Servicios</h1>
+        </div>
+        {% for otro_servicio in otros_servicios %}
+            <div class="col-lg-4">
+                <div class="panel panel-primary" style="height: 400px">
+                    <div class="panel-heading">
+                      <i class="fa fa-archive"></i> {{otro_servicio.nombre}}
+                    </div>
+                    <div class="panel-body text-center">
+                        {% if otro_servicio.image %}
+                            <img class="img-responsive center-block" src="{% thumbnail otro_servicio.image 100x100 crop %}" alt="No imagen">
+                        {% else %}
+                            <img class="img-responsive center-block" src="{% static 'images/sin-imagen.jpg' %}">
+                        {% endif %}
+                        <br>
+                        <div class="well">
+                            {% autoescape off %}{{ otro_servicio.descripcion|truncatewords:20 }} {% endautoescape %}
+                        </div>
+                        <a class="btn btn-success" href="{% url 'servicios:detail' otro_servicio.id %}">Visitar</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
