--- a/stib-administraciones/templates/contactos/contactos_form.html
+++ b/stib-administraciones/templates/contactos/contactos_form.html
@@ -18,7 +18,7 @@
                 {% endif %}
                 contacto del edificio "{{edificio.nombre}}"
             </h1>
-            <form class="form-horizontal" method="post" enctype="multipart/form-data">
+            <form class="form-horizontal" method="post">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class="control-group">
