--- a/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
+++ b/stib-administraciones/templates/edificios/edificios_administraciones_detail.html
@@ -155,7 +155,7 @@
                         </a>
                     </div>
                     <div class="col-sm-3">
-                        <a href="{% url 'horarios:edificio_horario_list' object.id %}">
+                        <a href="{% url 'llaves:set_llaves' object.id %}">
                             <i class="fa fa-key fa-5x"></i><br>
                             Llaves
                         </a>
