Fixes UI, envio de comentario de llaves

--- a/stib-administraciones/templates/_menu_lateral.html
+++ b/stib-administraciones/templates/_menu_lateral.html
@@ -24,7 +24,7 @@
                     {% if edificios_usuarios %}
                         <li class="edificio">
                             <a href="#"><i class="fa fa-building fa-fw"></i> Mis Clientes<span class="fa arrow"></span></a>
-                            <ul class="{% if '/edificios/administracion/' in request.get_full_path %}nav nav-second-level collapse in{% else %}nav nav-second-level{% endif %}">
+                            <ul class="{% if '/edificios/' in request.get_full_path or '/contactos/' in request.get_full_path or '/llaves/' in request.get_full_path or '/fotos/' in request.get_full_path or '/horarios/' in request.get_full_path %}nav nav-second-level collapse in{% else %}nav nav-second-level{% endif %}">
                                 {% for edificio in edificios_usuarios %}
                                     <li class="edificio">
                                         <a href="{% url 'edificios:administraciones' edificio.id %}"> {{edificio.direccion}} </a>
