--- a/stib-administraciones/templates/edificios/edificios_form.html
+++ b/stib-administraciones/templates/edificios/edificios_form.html
@@ -7,7 +7,7 @@
 
     <div class="row">
         <div class="col-lg-9">
-            <a href="{% url 'edificios:list' %}"><i class="fa fa-reply"> Volver</i></a>
+            <a class="btn btn-success" href="{% url 'edificios:list' %}"><i class="fa fa-reply"> Volver</i></a>
             <h1 class="page-header">
                 {% if form.instance.id %}
                     Editar
