--- a/stib-administraciones/templates/horarios/horarios_form.html
+++ b/stib-administraciones/templates/horarios/horarios_form.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-lg-9">
             <br>
-            <a href="{% url 'horarios:edificio_horario_list' edificio.id %}">
+            <a class="btn btn-success" href="{% url 'horarios:edificio_horario_list' edificio.id %}">
                 <i class="fa fa-reply"> Volver</i>
             </a>
 
