--- a/stib-administraciones/templates/productos/productos_detail.html
+++ b/stib-administraciones/templates/productos/productos_detail.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-lg-12">
             <br>
-            <a href="{% url 'productos:list' %}"><i class="fa fa-reply"> Volver</i></a>
+            <a class="btn btn-success" href="{% url 'productos:list' %}"><i class="fa fa-reply"> Volver</i></a>
             <h1 class="page-header">
                 {{ object.nombre }}
             </h1>
