--- a/stib-administraciones/templates/contactos/contactos_form.html
+++ b/stib-administraciones/templates/contactos/contactos_form.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-lg-9">
             <br>
-            <a href="{% url 'contactos:edificio_contactos_list' edificio.id %}"><i class="fa fa-reply"> Volver</i></a>
+            <a class="btn btn-success" href="{% url 'contactos:edificio_contactos_list' edificio.id %}"><i class="fa fa-reply"> Volver</i></a>
 
             <h1 class="page-header">
                 {% if form.instance.id %}
