--- a/stib-administraciones/templates/fotos/fotos_administraciones_form.html
+++ b/stib-administraciones/templates/fotos/fotos_administraciones_form.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-lg-9">
             <br>
-            <a href="{% url 'fotos:administracion_list' edificio.id %}"><i class="fa fa-reply"> Volver</i></a>
+            <a class="btn btn-success" href="{% url 'fotos:administracion_list' edificio.id %}"><i class="fa fa-reply"> Volver</i></a>
             <h1 class="page-header">
                 {% if form.instance.id %}
                     Editar
