--- a/stib-administraciones/templates/fotos/fotos_administraciones_list.html
+++ b/stib-administraciones/templates/fotos/fotos_administraciones_list.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <br>
-                <a href="{% url 'edificios:administraciones' edificio.id %}"><i class="fa fa-reply"> Volver</i></a>
+                <a class="btn btn-success" href="{% url 'edificios:administraciones' edificio.id %}"><i class="fa fa-reply"> Volver</i></a>
 
                 <h1 class="page-header">
                     Fotos del edificio "{{ edificio.nombre }}"
