--- a/stib-administraciones/templates/llaves/llaves_form.html
+++ b/stib-administraciones/templates/llaves/llaves_form.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-lg-9">
             <br>
-            <a href="{% url 'edificios:administraciones' edificio.id %}">
+            <a class="btn btn-success" href="{% url 'edificios:administraciones' edificio.id %}">
                 <i class="fa fa-reply"> Volver</i>
             </a>
             <h1 class="page-header">
@@ -17,19 +17,27 @@
 
             <div class="alert alert-dismissable alert-info">
 	            <i class="fa fa-exclamation-triangle"></i>
-                Seleccione las llaves con las que cuenta el edificio.
+                Seleccione las llaves con las que cuenta el edificio, también puede dejarnos
+                un comentario.
             </div>
 
             <form class="form-horizontal" method="post">
                 {% csrf_token %}
                 {{ form.tipo_llaves }}
+
+                <div class="form-group">
+                  <textarea class="form-control" rows="5" id="llave_comentario" name="llave_comentario"></textarea>
+                </div>
+
                 <div class="control-group">
                   <div class="controls">
                     <button type="submit" class="btn btn-primary"><i class="fa fa-check"></i> Confirmar</button>
                   </div>
                 </div>
             </form>
+
         </div>
     </div>
+
 
 {% endblock %}
