--- a/stib-administraciones/templates/emails/email_sincronizacion.html
+++ b/stib-administraciones/templates/emails/email_sincronizacion.html
@@ -15,6 +15,8 @@
     <b>Piso:</b>{{detalle.piso}}
     <br>
     <b>Dpto:</b>{{detalle.departamento}}
+    <br>
+    <b>Teléfono:</b>{{detalle.telefono}}
 {% elif entidad == 'Llaves' %}
     <b>Lave:</b> {{detalle.llave}}
 {% elif entidad == 'Horarios' %}
