Menu superior fixes.

--- a/stib-administraciones/templates/_menu_superior.html
+++ b/stib-administraciones/templates/_menu_superior.html
@@ -12,7 +12,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img src="/static/images/logo_stib.png" width="100" height="50">
+                <img src="/static/images/stib_logo_154_73.jpg">
             </a>
         </div>
         <!-- end Brand -->
