--- a/stib-administraciones/staticfiles/css/project.css
+++ b/stib-administraciones/staticfiles/css/project.css
@@ -62,17 +62,18 @@ body{
     }
 }
 
+
+/* ***********************************************+
+        Navigation
+        Top Right Navigation Dropdown Styles
+************************************************** */
+
 .navbar-static-side ul li {
     border-bottom: 1px solid #e7e7e7;
 }
 
-/* Navigation */
 
-/* ------------------------------- */
-
-/* Top Right Navigation Dropdown Styles */
-
- .navbar-top-links li {
+.navbar-top-links li {
     display: inline-block;
 }
 
@@ -126,22 +127,30 @@ body{
     left: auto;
 }
 
-/* Sidebar Menu Styles */
-
- .sidebar-search {
-    padding: 15px;
+.navbar-brand {
+  float: left;
+  height: 80px;
+  padding: 0px 15px;
+  font-size: 18px;
+  line-height: 20px;
+  margin-top: 5px;
 }
 
-.arrow {
-    float: right;
+.navbar-nav {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    height: 80px;
+
 }
 
-.fa.arrow:before {
-    content: "\f104";
-}
-
-.active > a > .fa.arrow:before {
-    content: "\f107";
+.navbar-nav>li>a {
+  padding-top: 35px;
+  padding-bottom: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 14px;
 }
 
 .nav-second-level li,
@@ -190,6 +199,35 @@ border-color: #e7e7e7;
 .navbar-default  .navbar-right>li>a {
     color: #428bca;
 }
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+  color: #000;
+  background-color: #e7e7e7;
+  border-right: #DFDCDC solid 1px;
+  border-left: #DFDCDC solid 1px;
+}
+
+/* *************************************++
+        Sidebar Menu Styles
+****************************************** */
+
+ .sidebar-search {
+    padding: 15px;
+}
+
+.arrow {
+    float: right;
+}
+
+.fa.arrow:before {
+    content: "\f104";
+}
+
+.active > a > .fa.arrow:before {
+    content: "\f107";
+}
+
+
 
 table.dataTable  {
     width: 100%;
@@ -254,10 +292,3 @@ ul {
   border-bottom: 1px solid #5E5E5E;
 }
 
-.navbar-brand {
-  float: left;
-  height: 50px;
-  padding: 0px 15px;
-  font-size: 18px;
-  line-height: 20px;
-}
