--- a/stib-administraciones/templates/relaciones/notificar_usuarios_productos.html
+++ b/stib-administraciones/templates/relaciones/notificar_usuarios_productos.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Envío de Notificaciones{% endblock %}
+{% block title %}Notificaciones Usuarios Productos{% endblock %}
 
 {% block content %}
 
 <div class="row">
     <div class="col-lg-9">
-        <h1 class="page-header">Envío de Notificaciones</h1>
+        <h1 class="page-header">Notificaciones Usuarios Productos</h1>
     </div>
 </div>
 <div class="row">
