--- a/stib-administraciones/templates/_menu_lateral.html
+++ b/stib-administraciones/templates/_menu_lateral.html
@@ -17,6 +17,7 @@
             {% if request.user.is_staff %}
                 <li>
                     <a href="{% url 'edificios:list' %}"><i class="fa fa-building fa-fw"></i> Edificios </a>
+		    <a href="{% url 'notificaciones:definir' %}"><i class="fa fa-bullhorn fa-fw"></i> Notificaciones </a>
                 </li>
             {% else %}
                 <!-- Lista de edificios del usuario logueado -->
