--- a/stib-administraciones/templates/base.html
+++ b/stib-administraciones/templates/base.html
@@ -14,6 +14,8 @@
         <![endif]-->
 
         {% block css %}
+            <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" type="text/css" media="all" />
+
             <!-- Bootstrap 3 -->
             <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
             <!-- Font-Awesome -->
@@ -67,6 +69,7 @@
         {% block javascript %}
             <!-- Latest JQuery -->
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+            <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js" type="text/javascript"></script>
 
             <!-- Bootstrap Js -->
             <script src="{% static 'js/bootstrap.min.js' %}"></script>
