--- a/stib-administraciones/templates/base.html
+++ b/stib-administraciones/templates/base.html
@@ -81,10 +81,13 @@
             <!-- FancyBox -->
             <script type="text/javascript" src="{% static 'libs/fancybox/source/jquery.fancybox.pack.js' %}"></script>
             <script type="text/javascript" src="{% static 'libs/fancybox/source/helpers/jquery.fancybox-buttons.js' %}"></script>
-            <!-- place project specific Javascript in this file -->
-            <script src="{% static 'js/project.js' %}"></script>
             <!-- Menu desplegable bootstrap -->
             <script src="{% static 'js/jquery.metisMenu.js' %}"></script>
+            <!-- tinymce editor -->
+            <script type="text/javascript" src="{% static 'libs/tinymce/tinymce.min.js' %}"></script>
+
+            <!-- place project specific Javascript in this file -->
+            <script src="{% static 'js/project.js' %}"></script>
         {% endblock javascript %}
     </body>
 </html>
