--- a/stib-administraciones/templates/relaciones/establecer_tipo_comunicacion.html
+++ b/stib-administraciones/templates/relaciones/establecer_tipo_comunicacion.html
@@ -17,7 +17,7 @@
             {{ form|crispy }}
             <div class="control-group">
               <div class="controls">
-                <button type="submit" class="btn btn-primary">Aceptar</button>
+                <button type="submit" class="btn btn-primary"><i class="fa fa-check"></i> Aceptar</button>
               </div>
             </div>
         </form>
