--- a/stib-administraciones/templates/relaciones/notificar_form.html
+++ b/stib-administraciones/templates/relaciones/notificar_form.html
@@ -18,7 +18,7 @@
                 {{ form|crispy }}
                 <div class="control-group">
                   <div class="controls">
-                    <button type="submit" class="btn btn-primary"><i class="fa fa-share"></i> Enviar</button><br><br>
+                    <button type="submit" class="btn btn-primary"><i class="fa fa-check"></i> Enviar</button><br><br>
                   </div>
                 </div>
             </form>
