--- a/stib-administraciones/templates/relaciones/notificar_form.html
+++ b/stib-administraciones/templates/relaciones/notificar_form.html
@@ -29,4 +29,18 @@
 {% block javascript %}
     {{ block.super }}
     <script src="{% static 'js/notificaciones-autocomplete.js' %}"></script>
+    <script>
+        /* --------------------------------------------
+            Configuracion Tinymce editor
+         --------------------------------------------- */
+    tinymce.init({
+        selector: "#id_descripcion",
+        plugins: [
+            "advlist autolink lists link image charmap print preview anchor",
+            "searchreplace visualblocks code fullscreen",
+            "insertdatetime media table contextmenu paste"
+        ],
+        toolbar: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image"
+    });
+    </script>
 {% endblock javascript %}
