--- a/stib-administraciones/templates/_menu_lateral.html
+++ b/stib-administraciones/templates/_menu_lateral.html
@@ -18,8 +18,16 @@
                 <li>
                     <a href="{% url 'edificios:list' %}"><i class="fa fa-building fa-fw"></i> Edificios </a>
                 </li>
-                <li>
-		            <a href="{% url 'notificaciones:definir' %}"><i class="fa fa-bullhorn fa-fw"></i> Notificaciones </a>
+                <li class="notificaciones">
+                    <a href="#"><i class="fa fa-bullhorn fa-fw"></i> Notificaciones <span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">
+                        <li class="notificaciones">
+                            <a href="{% url 'notificaciones:definir' %}"><i class="fa fa-chevron-circle-right"></i> Enviar</a>
+                        </li>
+                        <li class="notificaciones">
+                            <a href="{% url 'notificaciones:definir' %}"><i class="fa fa-bars"></i> Historial</a>
+                        </li>
+                    </ul>
                 </li>
             {% else %}
                 <!-- Lista de edificios del usuario logueado -->
