--- a/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    {% autopaginate notificaciones 5 %}
+    {% autopaginate results 20 %}
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Notificaciones para Edificios</h1>
@@ -20,43 +20,43 @@
                     <tr>
                         <th>Entidad</th>
                         <th>Nombre</th>
-                        <th>Día de envio</th>
+                        <th>Fecha</th>
                         <th>Edificio</th>
                         <th>Título</th>
                         <th>Descripción</th>
-                        <th>Leido</th>
+                        <th>Leído</th>
                         <th>Mail</th>
-                        <th>Tipo sugerencia</th>
+                        <th>Motivos</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% autoescape off %}
-                    {% if notificaciones %}
-                        {% for notificacion in notificaciones %}
+                    {% if results %}
+                        {% for notificacion in results %}
                             <tr>
+                                <!--- es un servicio??? --->
                                 {% if notificacion.servicio.nombre %}
-                                    <td>Servicio</td>
-                                    <td>{{notificacion.servicio.nombre}}</td>
-                                {% endif %}
-                                {% if notificacion.producto.nombre %}
-                                    <td>Producto</td>
+                                    <td><span class="label label-primary">Servicio</span></td>
                                     <td>
-										{{notificacion.producto.nombre}}
-										{% show_pop_up_entidad notificacion.producto %}	
-									</td>
+                                        {% show_popover_entidad notificacion.servicio %}
+                                    </td>
                                 {% endif %}
+                                <!--- / es un servicio??? --->
+                                <!--- es un producto ??? --->
+                                {% if notificacion.producto.nombre %}
+                                    <td><span class="label label-success">Producto</span></td>
+                                    <td>
+                                        {% show_popover_entidad notificacion.producto %}
+                                    </td>
+                                {% endif %}
+                                <!--- / es un producto ??? --->
                                 <td>{{notificacion.creado|date:"SHORT_DATE_FORMAT"}}</td>
                                 <td>{{notificacion.edificio.nombre}} - {{notificacion.edificio.direccion}}</td>
                                 <td>{{notificacion.titulo}}</td>
                                 <td>
                                     {{notificacion.descripcion|truncatechars:15}}
                                     {% if notificacion.descripcion|length > 15 %}
-                                        <a tabindex="0" data-toggle="popover"
-                                           data-trigger="focus" class='open_popover'
-                                           title="<b>Descripción</b>"
-                                           data-content="{{notificacion.descripcion}}">
-                                            [+]
-                                        </a>
+                                        {% show_popover_descripcion notificacion.descripcion %}
                                     {% endif %}
                                 </td>
                                 <td>{{notificacion.leido|icon_by_boolean}}</td>
