--- a/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load i18n pagination_tags %}
+{% load crispy_forms_tags %}
 {% load relaciones_tags %}
+{% load staticfiles %}
 
 {% block title %}
     Notificaciones para Edificios
@@ -11,6 +13,79 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Notificaciones para Edificios</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                        <div class="panel-heading" role="tab" id="headingTwo">
+                            <h4 class="panel-title">
+                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    <i class="fa fa-search"></i> Filtrar resultados
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div class="panel-body">
+                                <form method="post">
+                                    {% csrf_token %}
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            {{search_form.titulo|as_crispy_field}}
+                                        </div>
+                                        <div class="col-lg-6">
+                                            {{search_form.entidades|as_crispy_field}}
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            {{search_form.descripcion|as_crispy_field}}
+                                        </div>
+                                        <div class="col-lg-6">
+                                            {{search_form.producto_nombre|as_crispy_field}}
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            {{search_form.leido|as_crispy_field}}
+                                        </div>
+                                        <div class="col-lg-6">
+                                            {{search_form.servicio_nombre|as_crispy_field}}
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            {{search_form.mail|as_crispy_field}}
+                                        </div>
+                                        <div class="col-lg-6">
+                                            {{search_form.motivos|as_crispy_field}}
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            {{search_form.fecha_desde|as_crispy_field}}
+                                        </div>
+                                        <div class="col-lg-6">
+                                            {{search_form.fecha_hasta|as_crispy_field}}
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            {{search_form.edificio_nombre|as_crispy_field}}
+                                        </div>
+
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Buscar</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
@@ -72,3 +147,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block javascript %}
+    {{ block.super }}
+    <script src="{% static 'js/notificaciones-autocomplete.js' %}"></script>
+{% endblock javascript %}
