--- a/stib-administraciones/templates/relaciones/notificaciones_administraciones_list.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_administraciones_list.html
@@ -13,6 +13,9 @@
             <h1 class="page-header">Notificaciones para Administraciones</h1>
         </div>
     </div>
+    <!--- formulario de busqueda --->
+	{% show_search_form search_form %}
+    <!--- / formulario de busqueda --->
     <div class="row">
         <div class="col-lg-12">
             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered">
