--- a/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <!--- formulario de busqueda --->
-	{% show_search_form search_form %}
+	{% show_search_form request search_form %}
     <!--- / formulario de busqueda --->
     <div class="row">
         <div class="col-lg-12">
