--- a/stib-administraciones/templates/relaciones/_show_search_form.html
+++ b/stib-administraciones/templates/relaciones/_show_search_form.html
@@ -68,6 +68,7 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Buscar</button>
+                                            <a href="{{current_path}}">Limpiar filtros</a>
                                         </div>
                                     </div>
                                 </form>
