--- a/stib-administraciones/templates/relaciones/_show_search_form.html
+++ b/stib-administraciones/templates/relaciones/_show_search_form.html
@@ -14,6 +14,9 @@
                             <div class="panel-body">
                                 <form method="post">
                                     {% csrf_token %}
+									{{search_form.producto}}
+                                    {{search_form.servicio}}
+                                    {{search_form.edificio}}
                                     <div class="row">
                                         <div class="col-lg-6">
                                             {{search_form.titulo|as_crispy_field}}
