--- a/stib-administraciones/templates/base.html
+++ b/stib-administraciones/templates/base.html
@@ -26,6 +26,8 @@
             <!-- FancyBox -->
             <link  rel="stylesheet" href="{% static 'libs/fancybox/source/jquery.fancybox.css' %}">
             <link  rel="stylesheet" href="{% static 'libs/fancybox/source/helpers/jquery.fancybox-buttons.css' %}">
+            <!-- include Datepicker -->
+            <link  rel="stylesheet" href="{% static 'libs/datepicker/css/datepicker.css' %}">
             <!-- Project specific CSS -->
             <link href="{% static 'css/project.css' %}" rel="stylesheet">
         {% endblock %}
@@ -85,6 +87,8 @@
             <script src="{% static 'js/jquery.metisMenu.js' %}"></script>
             <!-- tinymce editor -->
             <script type="text/javascript" src="{% static 'libs/tinymce/tinymce.min.js' %}"></script>
+            <!-- include Datepicker -->
+            <script type="text/javascript" src="{% static 'libs/datepicker/js/bootstrap-datepicker.js' %}"></script>
 
             <!-- place project specific Javascript in this file -->
             <script src="{% static 'js/project.js' %}"></script>
