--- a/stib-administraciones/templates/relaciones/_popover_descripcion.html
+++ b/stib-administraciones/templates/relaciones/_popover_descripcion.html
@@ -1,5 +1,6 @@
 <a tabindex="0" data-toggle="popover"
    data-trigger="focus" class='open_popover'
+   data-placement="top"
    title="<b>Descripción</b>"
    data-content="{{descripcion}}">
     [+]
