--- a/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
+++ b/stib-administraciones/templates/relaciones/notificaciones_edificios_list.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <!--- formulario de busqueda --->
-	{% show_search_form request search_form %}
+    {% show_search_form request search_form collapse_filters %}
     <!--- / formulario de busqueda --->
     <div class="row">
         <div class="col-lg-12">
@@ -40,7 +40,7 @@
                             <tr>
                                 <!--- es un servicio??? --->
                                 {% if notificacion.servicio.nombre %}
-                                    <td><span class="label label-primary">Servicio</span></td>
+                                    <td><span class="label label-success">Servicio</span></td>
                                     <td>
                                         {% show_popover_entidad notificacion.servicio %}
                                     </td>
@@ -48,7 +48,7 @@
                                 <!--- / es un servicio??? --->
                                 <!--- es un producto ??? --->
                                 {% if notificacion.producto.nombre %}
-                                    <td><span class="label label-success">Producto</span></td>
+                                    <td><span class="label label-danger">Producto</span></td>
                                     <td>
                                         {% show_popover_entidad notificacion.producto %}
                                     </td>
