--- a/stib-administraciones/templates/_menu_lateral.html
+++ b/stib-administraciones/templates/_menu_lateral.html
@@ -2,15 +2,19 @@
     <div class="sidebar-collapse">
         <ul class="nav" id="side-menu">
             <li class="sidebar-search">
-                <div class="input-group custom-search-form">
-
-                    <input id="buscar" type="text" class="form-control" placeholder="Buscar..."  data-provide='typeahead'>
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </span>
-                </div>
+				<form method='POST' action="{% url 'edificios:search-edificios' %}" role='form' class='form-inline'>
+                    {% csrf_token %}
+		            <div class="input-group custom-search-form">		
+						<input id="id_edificio" name="id_edificio" type="hidden" value='2'>
+			            <input  type="text" class="form-control" placeholder="Busca"  data-provide='typeahead' name="nombre_edificio" id="nombre_edificio">	
+					
+			            <span class="input-group-btn">
+			                <button type='submit' class="btn btn-default" type="button">
+			                    <i class="fa fa-search"></i>
+			                </button>
+			            </span>
+		            </div>
+				<form>
                 <!-- /input-group -->
             </li>
 
